--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass-watch": "sass --no-source-map --watch ./assests/scss/:./assests/css/",
     "dev": "npm-run-all --parallel sass-watch start"
-
-
   },
   "keywords": [
     "social"
@@ -17,6 +15,7 @@
   "author": "surendram",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
