--- a/package.json
+++ b/package.json
@@ -15,17 +15,30 @@
   "author": "surendram",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
+    "kue": "^0.11.1",
     "mongoose": "^6.9.1",
+    "multer": "^1.4.5-lts.1",
+    "node-modules": "^0.0.1",
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
     "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "sass": "^1.59.3"
+    "passport-local-mongoose": "^8.0.0",
+    "sass": "^1.59.3",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "npm": "^9.6.2",
